# effective-palm-tree

./: .gitignore  README.md  docker-compose.yml  dotenv_example  pyproject.toml
docker/nginx/: nginx.conf
docker/web/: Dockerfile  entrypoint.sh
src/: manage.py
src/apps/users/: forms.py  tasks.py  urls.py  utils.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/models/: __init__.py  managers.py  models.py
src/apps/users/templates/registration/: login.html
src/apps/users/templates/users/: base.html  email_reset_confirm.html  email_reset_email.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  register.html  register_confirm.html  register_done.html  registration_confirm_email.html  user_detail.html  user_form.html  user_list.html
src/project/: settings.py  urls.py
